--- a/views/view_blog.ejs
+++ b/views/view_blog.ejs
@@ -7,8 +7,8 @@
         <div class="container mt-5">
             <center>
                 <h1><%= blog.title %></h1>
-                <img src="<%= blog.coverImageUrl %>" alt="" width="700px" height="500px">
-                <pre width="1000px"><%= blog.body %></pre>
+                <img src="<%= blog.coverImageUrl %>" alt="" class="img-fluid" width="700px" height="500px">
+                <pre class="text-wrap" style="max-width: 1000px;"><%= blog.body %></pre>
             </center>
         </div>
 
